back to a fixed page size with overflow hidden. blegh.

--- a/main.css
+++ b/main.css
@@ -31,6 +31,7 @@ html, body {
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   background: #414244;
+  overflow: hidden;
 }
 
 header {
@@ -60,6 +61,11 @@ section {
   background-image: -webkit-linear-gradient(top, #f9dee3, white);
   background-image: -moz-linear-gradient(top, #f9dee3, white);  
   background-image: -o-linear-gradient(top, #f9dee3, white);
+  position: absolute;
+  top: 100px;
+  left: 0px;
+  right: 0px;
+  bottom: 30px;
 }
 
 section div.wrapper {
@@ -78,7 +84,6 @@ section img.lovebomb-person {
 section div.details {
   padding-top: 70px;
   margin-left: 375px;
-  min-height: 375px;
 }
 
 section h2 {
@@ -115,4 +120,9 @@ footer {
   text-align: center;
   font-size: 11px;
   padding: 10px;
+  position: absolute;
+  height: 10px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
 }
